--- a/cryptoios/cryptoios/ViewControlelrs/Sanguo/Store/SanguoStoreViewController.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/Sanguo/Store/SanguoStoreViewController.xib
@@ -27,7 +27,7 @@
                     <rect key="frame" x="0.0" y="20" width="375" height="1134"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y15-AV-gF5">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="900"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="995"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sanguo/packViewBg" translatesAutoresizingMaskIntoConstraints="NO" id="OMI-IH-5Xx">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="242"/>
@@ -94,10 +94,10 @@
                                     </connections>
                                 </segmentedControl>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ne4-GU-8jv">
-                                    <rect key="frame" x="40" y="395" width="295" height="300"/>
+                                    <rect key="frame" x="40" y="395" width="295" height="600"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sanguo/packViewTabContentBg" translatesAutoresizingMaskIntoConstraints="NO" id="aXe-Yg-ozF">
-                                            <rect key="frame" x="0.0" y="0.0" width="295" height="300"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="295" height="600"/>
                                         </imageView>
                                         <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MY1-vw-CWt" customClass="SanguoSegmentedControl" customModule="cryptoios" customModuleProvider="target">
                                             <rect key="frame" x="30" y="10" width="235" height="35"/>
@@ -128,13 +128,13 @@
                                             </userDefinedRuntimeAttributes>
                                         </segmentedControl>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="fSC-UE-3q7">
-                                            <rect key="frame" x="0.0" y="65" width="295" height="235"/>
+                                            <rect key="frame" x="0.0" y="65" width="295" height="535"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UHs-pl-de1">
                                                 <size key="itemSize" width="195" height="270"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <connections>
                                                 <outlet property="dataSource" destination="rhE-KJ-55J" id="8pi-dz-ztz"/>
@@ -145,7 +145,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="fSC-UE-3q7" secondAttribute="trailing" id="0nv-Ud-WaN"/>
-                                        <constraint firstAttribute="height" constant="300" id="2hQ-Lz-ykH"/>
+                                        <constraint firstAttribute="height" constant="600" id="2hQ-Lz-ykH"/>
                                         <constraint firstItem="aXe-Yg-ozF" firstAttribute="leading" secondItem="Ne4-GU-8jv" secondAttribute="leading" id="2yo-Sb-npd"/>
                                         <constraint firstAttribute="trailing" secondItem="MY1-vw-CWt" secondAttribute="trailing" constant="30" id="Dl7-Vd-aR3"/>
                                         <constraint firstItem="MY1-vw-CWt" firstAttribute="leading" secondItem="Ne4-GU-8jv" secondAttribute="leading" constant="30" id="PTb-ZA-8I5"/>
@@ -159,10 +159,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xCO-fB-xZb">
-                                    <rect key="frame" x="40" y="395" width="295" height="300"/>
+                                    <rect key="frame" x="40" y="395" width="295" height="600"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sanguo/packViewTabContentBg" translatesAutoresizingMaskIntoConstraints="NO" id="QfY-W2-wfb">
-                                            <rect key="frame" x="0.0" y="0.0" width="295" height="300"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="295" height="600"/>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="WFg-Ad-SUC">
                                             <rect key="frame" x="10" y="65" width="275" height="21"/>
@@ -233,7 +233,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </segmentedControl>
                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="IoB-5L-h5I">
-                                            <rect key="frame" x="137.5" y="140" width="20" height="20"/>
+                                            <rect key="frame" x="137.5" y="290" width="20" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="4BA-dc-vjU"/>
                                                 <constraint firstAttribute="width" constant="20" id="M7j-d4-VUD"/>
@@ -242,7 +242,7 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="300" id="GQe-yf-58O"/>
+                                        <constraint firstAttribute="height" constant="600" id="GQe-yf-58O"/>
                                         <constraint firstItem="IoB-5L-h5I" firstAttribute="centerX" secondItem="xCO-fB-xZb" secondAttribute="centerX" id="KKS-zc-O0C"/>
                                         <constraint firstItem="QfY-W2-wfb" firstAttribute="top" secondItem="xCO-fB-xZb" secondAttribute="top" id="P4Y-pP-VLB"/>
                                         <constraint firstItem="WFg-Ad-SUC" firstAttribute="leading" secondItem="xCO-fB-xZb" secondAttribute="leading" constant="10" id="Utv-eU-hgv"/>
@@ -258,10 +258,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rSe-sS-rXg">
-                                    <rect key="frame" x="40" y="395" width="295" height="300"/>
+                                    <rect key="frame" x="40" y="395" width="295" height="600"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sanguo/packViewTabContentBg" translatesAutoresizingMaskIntoConstraints="NO" id="vPu-tL-oUq">
-                                            <rect key="frame" x="0.0" y="0.0" width="295" height="300"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="295" height="600"/>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Om0-g5-mfB">
                                             <rect key="frame" x="10" y="65" width="275" height="21"/>
@@ -314,7 +314,7 @@
                                             </subviews>
                                         </stackView>
                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="JQw-gM-fIn">
-                                            <rect key="frame" x="137.5" y="140" width="20" height="20"/>
+                                            <rect key="frame" x="137.5" y="290" width="20" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="20" id="TDq-9N-0dq"/>
                                                 <constraint firstAttribute="height" constant="20" id="zdV-1B-Vhg"/>
@@ -360,7 +360,7 @@
                                         <constraint firstItem="JQw-gM-fIn" firstAttribute="centerY" secondItem="rSe-sS-rXg" secondAttribute="centerY" id="ZiX-rj-rdS"/>
                                         <constraint firstItem="JQw-gM-fIn" firstAttribute="centerX" secondItem="rSe-sS-rXg" secondAttribute="centerX" id="dHx-VL-91j"/>
                                         <constraint firstItem="Hzr-r9-ufK" firstAttribute="leading" secondItem="rSe-sS-rXg" secondAttribute="leading" constant="50" id="hsG-Vx-iO5"/>
-                                        <constraint firstAttribute="height" constant="300" id="kII-XK-Wwm"/>
+                                        <constraint firstAttribute="height" constant="600" id="kII-XK-Wwm"/>
                                         <constraint firstAttribute="bottom" secondItem="vPu-tL-oUq" secondAttribute="bottom" id="snU-B8-ID6"/>
                                         <constraint firstAttribute="trailing" secondItem="Hzr-r9-ufK" secondAttribute="trailing" constant="50" id="vcZ-MT-hmd"/>
                                     </constraints>
@@ -370,12 +370,12 @@
                             <constraints>
                                 <constraint firstItem="T6M-8S-ioa" firstAttribute="centerX" secondItem="y15-AV-gF5" secondAttribute="centerX" id="19p-13-2Vq"/>
                                 <constraint firstItem="OMI-IH-5Xx" firstAttribute="top" secondItem="y15-AV-gF5" secondAttribute="top" id="2pW-cV-Oad"/>
-                                <constraint firstAttribute="height" constant="900" id="6Yt-da-pM3"/>
                                 <constraint firstItem="OyJ-Rs-pAM" firstAttribute="leading" secondItem="ccq-Wx-GrA" secondAttribute="leading" id="995-PU-E9E"/>
                                 <constraint firstAttribute="trailing" secondItem="OMI-IH-5Xx" secondAttribute="trailing" id="FDH-0r-gH4"/>
                                 <constraint firstAttribute="trailing" secondItem="ccq-Wx-GrA" secondAttribute="trailing" constant="20" id="Fkr-47-QrU"/>
                                 <constraint firstItem="xCO-fB-xZb" firstAttribute="leading" secondItem="y15-AV-gF5" secondAttribute="leading" constant="40" id="J8D-2L-1rL"/>
                                 <constraint firstItem="mga-JA-Jg0" firstAttribute="centerX" secondItem="T6M-8S-ioa" secondAttribute="centerX" id="JhW-h1-2nC"/>
+                                <constraint firstAttribute="bottom" secondItem="Ne4-GU-8jv" secondAttribute="bottom" id="VyT-yX-WIl"/>
                                 <constraint firstItem="Ne4-GU-8jv" firstAttribute="top" secondItem="LDu-jk-HSR" secondAttribute="bottom" constant="20" id="YYI-1f-auT"/>
                                 <constraint firstItem="OyJ-Rs-pAM" firstAttribute="top" secondItem="ccq-Wx-GrA" secondAttribute="bottom" constant="8" symbolic="YES" id="aDq-mT-W2y"/>
                                 <constraint firstItem="LDu-jk-HSR" firstAttribute="centerX" secondItem="y15-AV-gF5" secondAttribute="centerX" id="apG-Vx-Mox"/>
@@ -399,15 +399,16 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="y15-AV-gF5" firstAttribute="leading" secondItem="2Ga-a0-GZN" secondAttribute="leading" id="0Id-WN-pA6"/>
-                        <constraint firstAttribute="bottom" secondItem="y15-AV-gF5" secondAttribute="bottom" id="c0O-Ej-b4i"/>
+                        <constraint firstItem="y15-AV-gF5" firstAttribute="centerY" secondItem="2Ga-a0-GZN" secondAttribute="centerY" priority="250" id="FmD-hd-pB0"/>
+                        <constraint firstAttribute="bottom" secondItem="y15-AV-gF5" secondAttribute="bottom" priority="250" id="c0O-Ej-b4i"/>
                         <constraint firstItem="y15-AV-gF5" firstAttribute="top" secondItem="2Ga-a0-GZN" secondAttribute="top" id="fnc-UE-csG"/>
+                        <constraint firstItem="y15-AV-gF5" firstAttribute="centerX" secondItem="2Ga-a0-GZN" secondAttribute="centerX" id="ftd-I6-3vm"/>
                         <constraint firstAttribute="trailing" secondItem="y15-AV-gF5" secondAttribute="trailing" id="kW9-77-VOn"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="y15-AV-gF5" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="Iqj-JZ-MVq"/>
                 <constraint firstItem="2Ga-a0-GZN" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="NAm-67-1yw"/>
                 <constraint firstItem="2Ga-a0-GZN" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="No0-jO-FEi"/>
                 <constraint firstItem="2Ga-a0-GZN" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="QEm-XX-Z9h"/>
