--- a/cryptoios/cryptoios/ViewControlelrs/Sanguo/Store/kapai/SanguoStoreKapaiCell.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/Sanguo/Store/kapai/SanguoStoreKapaiCell.xib
@@ -19,50 +19,60 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sanguo/heroes/1-1" translatesAutoresizingMaskIntoConstraints="NO" id="pkW-cy-7aU">
-                        <rect key="frame" x="5" y="5" width="185" height="185"/>
+                        <rect key="frame" x="20" y="20" width="155" height="155"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="pkW-cy-7aU" secondAttribute="height" multiplier="1:1" id="cd4-C0-dY9"/>
+                            <constraint firstAttribute="width" secondItem="pkW-cy-7aU" secondAttribute="height" multiplier="1:1" id="wzl-S5-v28"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sanguo/cardBorder" translatesAutoresizingMaskIntoConstraints="NO" id="kF1-wI-bql">
-                        <rect key="frame" x="0.0" y="0.0" width="195" height="195"/>
+                        <rect key="frame" x="12" y="12" width="171" height="171"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="kF1-wI-bql" secondAttribute="height" multiplier="1:1" id="SYy-cB-m9Q"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="孙策" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHb-hP-T1q">
-                        <rect key="frame" x="15" y="206" width="50" height="54"/>
-                        <color key="backgroundColor" red="0.3843137254901961" green="0.33333333333333331" blue="0.41568627450980394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jTx-Vm-8nu">
+                        <rect key="frame" x="5" y="193" width="30.5" height="67"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="孙策" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHb-hP-T1q">
+                                <rect key="frame" x="5" y="0.0" width="20.5" height="67"/>
+                                <color key="backgroundColor" red="0.3843137254901961" green="0.33333333333333331" blue="0.41568627450980394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.38431372549999998" green="0.33333333329999998" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="EB4-8A-SFI"/>
+                            <constraint firstItem="VHb-hP-T1q" firstAttribute="top" secondItem="jTx-Vm-8nu" secondAttribute="top" id="1Be-Gv-poV"/>
+                            <constraint firstItem="VHb-hP-T1q" firstAttribute="leading" secondItem="jTx-Vm-8nu" secondAttribute="leading" constant="5" id="MBG-Kb-AG3"/>
+                            <constraint firstAttribute="bottom" secondItem="VHb-hP-T1q" secondAttribute="bottom" id="SZA-EJ-wut"/>
+                            <constraint firstAttribute="trailing" secondItem="VHb-hP-T1q" secondAttribute="trailing" constant="5" id="e63-LJ-2Mz"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="45" id="eXO-M5-XV5"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="中奖概率:0.06% 当前价格:-- ETH" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uvN-7o-qbf">
-                        <rect key="frame" x="67" y="206" width="113" height="54"/>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="中奖概率:0.06% 当前价格:-- ETH" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uvN-7o-qbf">
+                        <rect key="frame" x="37.5" y="193" width="152.5" height="67"/>
                         <color key="backgroundColor" red="0.50196078431372548" green="0.51764705882352946" blue="0.55294117647058827" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="kF1-wI-bql" secondAttribute="trailing" id="1ss-1t-itC"/>
-                <constraint firstItem="uvN-7o-qbf" firstAttribute="leading" secondItem="VHb-hP-T1q" secondAttribute="trailing" constant="2" id="H81-rB-hJe"/>
-                <constraint firstItem="kF1-wI-bql" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="IBj-kq-QDl"/>
-                <constraint firstItem="uvN-7o-qbf" firstAttribute="height" secondItem="VHb-hP-T1q" secondAttribute="height" id="JCO-ks-8lg"/>
-                <constraint firstItem="pkW-cy-7aU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="KdE-io-SKT"/>
-                <constraint firstItem="VHb-hP-T1q" firstAttribute="top" secondItem="kF1-wI-bql" secondAttribute="bottom" constant="11" id="Qat-0r-AiO"/>
-                <constraint firstAttribute="trailing" secondItem="uvN-7o-qbf" secondAttribute="trailing" constant="15" id="UXM-T6-QU3"/>
-                <constraint firstItem="VHb-hP-T1q" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="Z1E-qL-wtS"/>
-                <constraint firstAttribute="bottom" secondItem="VHb-hP-T1q" secondAttribute="bottom" constant="10" id="d3A-Go-Ucy"/>
-                <constraint firstItem="kF1-wI-bql" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="hZ9-dW-lXW"/>
-                <constraint firstAttribute="trailing" secondItem="pkW-cy-7aU" secondAttribute="trailing" constant="5" id="jUk-Xj-1X5"/>
-                <constraint firstItem="uvN-7o-qbf" firstAttribute="centerY" secondItem="VHb-hP-T1q" secondAttribute="centerY" id="rgv-85-Ruc"/>
-                <constraint firstItem="pkW-cy-7aU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="w4i-dK-jDs"/>
+                <constraint firstAttribute="bottom" secondItem="uvN-7o-qbf" secondAttribute="bottom" constant="10" id="0D7-FM-sN0"/>
+                <constraint firstAttribute="trailing" secondItem="kF1-wI-bql" secondAttribute="trailing" constant="12" id="1ss-1t-itC"/>
+                <constraint firstItem="uvN-7o-qbf" firstAttribute="leading" secondItem="jTx-Vm-8nu" secondAttribute="trailing" constant="2" id="6gH-rT-2x5"/>
+                <constraint firstAttribute="trailing" secondItem="pkW-cy-7aU" secondAttribute="trailing" constant="20" id="8iB-ze-aQn"/>
+                <constraint firstAttribute="bottom" secondItem="jTx-Vm-8nu" secondAttribute="bottom" constant="10" id="B8K-WZ-0CH"/>
+                <constraint firstItem="pkW-cy-7aU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Drl-dZ-UVB"/>
+                <constraint firstItem="kF1-wI-bql" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="12" id="IBj-kq-QDl"/>
+                <constraint firstItem="jTx-Vm-8nu" firstAttribute="top" secondItem="kF1-wI-bql" secondAttribute="bottom" constant="10" id="ILc-te-jbv"/>
+                <constraint firstItem="uvN-7o-qbf" firstAttribute="top" secondItem="kF1-wI-bql" secondAttribute="bottom" constant="10" id="IhF-a4-MfZ"/>
+                <constraint firstAttribute="trailing" secondItem="uvN-7o-qbf" secondAttribute="trailing" constant="5" id="UXM-T6-QU3"/>
+                <constraint firstItem="kF1-wI-bql" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="hZ9-dW-lXW"/>
+                <constraint firstItem="jTx-Vm-8nu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="ojD-QV-Cqk"/>
+                <constraint firstItem="pkW-cy-7aU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="qJC-Kl-WTD"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="193" height="269"/>
